# cordova-plugin-media-editor

./: README.md  package.json  plugin.xml
src/android/: CTYMediaEditor.gradle  CTYMediaEditor.java  CustomAndroidFormatStrategy.java  Mp3LameWraper.java  build.gradle
src/android/jni/: gradle.properties  readme.md  settings.gradle
src/android/jni/app/: build.gradle
src/android/jni/app/src/androidTest/java/org/apache/cordova/CTYMediaEditor/: ExampleInstrumentedTest.java
src/android/jni/app/src/main/: AndroidManifest.xml
src/android/jni/app/src/main/java/org/apache/cordova/CTYMediaEditor/: MainActivity.java
src/android/jni/app/src/main/res/values/: strings.xml  themes.xml
src/android/jni/app/src/main/res/values-night/: themes.xml
src/android/jni/app/src/test/java/org/apache/cordova/CTYMediaEditor/: ExampleUnitTest.java
src/android/jni/gradle/wrapper/: gradle-wrapper.properties
src/android/jni/mylibrary/: build.gradle
src/android/jni/mylibrary/src/androidTest/java/org/apache/cordova/mylibrary/: ExampleInstrumentedTest.java
src/android/jni/mylibrary/src/jni/: CMakeLists.txt  org_apache_cordova_CTYMediaEditor_Mp3LameWraper.c  org_apache_cordova_CTYMediaEditor_Mp3LameWraper.h
src/android/jni/mylibrary/src/jni/src/: id3tag.c  machine.h
src/android/jni/mylibrary/src/main/java/org/apache/cordova/CTYMediaEditor/: Mp3LameWraper.java
src/android/jni/mylibrary/src/test/java/org/apache/cordova/mylibrary/: ExampleUnitTest.java
src/ios/: CTYMediaEditor.h  CTYMediaEditor.m
typings/: CTYMediaEditor.d.ts
www/: CTYMediaEditor.js  CTYMediaEditorOptions.js
